erDiagram

    %% ==== Tables ==== %%

    %% main tables
    POST {
        INTEGER post_id PK
        TEXT title
        TEXT body
        TEXT date
    }

    TAG {
        INTEGER tag_id PK
        TEXT tag
    }

    CREDENTIALS {
        INTEGER user_id PK
        BLOB credential_id
        BLOB public_key
        INTEGER login_count
    }

    %% bridge tables
    POST_TAG {
        TEXT tag_id FK
        TEXT post_id FK
    }

    %% ==== Relationships ==== %%

    TAG ||--|{ POST_TAG : created_tag

    POST ||--|{ POST_TAG : in_post


